# Cursor_Pro_Helper

./: .gitignore  LICENSE  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: api_config.rs  auth_manager.rs  commands.rs  events.rs  lib.rs  machine.rs  main.rs  patcher.rs  utils.rs
src/components/: ApiConfig.vue  AuthConfig.vue  LanguageSwitch.vue  MachineId.vue
src/locales/: en.json  index.ts  zh-CN.json
