[package]
name = "cursor-pro-helper"
version = "1.3.0"
description = "An Elegant Cursor Assistant Tool"
authors = ["Elawen Carl"]
edition = "2021"

[[bin]]
name = "cursor-pro-helper"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
# GUI框架
tauri = { version = "2.2.3", features = [] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 异步运行时
tokio = { version = "1.32", features = ["full"] }
# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }
# 系统信息
sysinfo = "0.29"
# 工具库
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
dirs = "5.0.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
regex = "1.5"

# Windows特定依赖
[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[dev-dependencies]
rstest = "0.18"
tokio-test = "0.4"
tempfile = "3.8" 
